--- a/web/src/global.css
+++ b/web/src/global.css
@@ -5,7 +5,7 @@
     --color-gray-dark: #3A3A3A;
 
 
-    font-size: 60%;
+    font-size: 16px;
 }
 
 *{
@@ -18,14 +18,9 @@ html,body,#root{
     height: 100vh;
 }
 
-#root{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 body,input,button, textarea,label{
-    font: 500 1.6rem Roboto; 
+    font: 500 1rem Roboto; 
    
 }
 
@@ -57,7 +52,7 @@ label{
     justify-content: space-around;
     width:100%;
     align-items: center;
-    margin: 2rem;
+    margin: .5rem;
 }
 
 /* ======================== Inputs =========================== */
@@ -74,7 +69,7 @@ label{
 
 input{
     outline: 0;
-    padding: 1.5rem;
+    padding: 1.2rem;
     width: 100%;
     border: none;
 }
@@ -88,7 +83,7 @@ input{
 /* ======================== Button =========================== */
 
 button{
-    background-color: #E83A30;
+    background-color: var(--color-red-dark);
     padding:1rem 8rem;
     color:white;
     border-radius: 15px;
@@ -97,4 +92,24 @@ button{
     cursor: pointer;
     font-size:20px;
     margin:2rem;
+   
+}
+
+ a{
+    text-decoration: none;
+    color: white;
+}
+
+/* ======================== Scrollbar =========================== */
+
+body::-webkit-scrollbar{
+    width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track{
+    background: var(--color-red-light);
+}
+
+body::-webkit-scrollbar-thumb{
+    background: var(--color-red-dark);
 }
