--- a/web/src/pages/Login/styles.css
+++ b/web/src/pages/Login/styles.css
@@ -13,7 +13,7 @@
 
 .form{
     background-color:white;
-    padding:1rem;
+    padding:.5rem;
     display:flex;
     justify-content:space-around;
     flex-direction:column;
@@ -25,7 +25,7 @@
 }
 
 .form img{
-  margin-top: 2rem;
+  margin: 2rem;
 }
 .text{
     font-family: 'Roboto';
@@ -43,6 +43,6 @@
   border-radius:30px;
   background-color:white;
   min-width:30vw;
-  padding: 1rem 2rem;
+  padding: .5rem 1rem;
   cursor: pointer;
 }
