--- a/web/src/components/SidebarMenu/styles.css
+++ b/web/src/components/SidebarMenu/styles.css
@@ -3,7 +3,8 @@
     height: 100vh;
     position: fixed;
     transition: width 600ms ease;
-    
+    z-index: 5;
+    background-color: white;
   }
   
   .navbar-nav {
@@ -16,7 +17,7 @@
     justify-content: space-between;
     height: 100vh;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    max-width:17rem;
+    min-width:15rem;
   }
   
 .navbar-nav img{
@@ -70,4 +71,10 @@
   .nav-link i{
       min-width: 2rem;
       margin:0 1.5rem;
+  }
+
+  a.active{
+    background-color: #f5f5f5;
+    color:#E83A30;
+    border: 1px solid #E5E5E5;
   }
