--- a/web/src/components/TopMenu/styles.css
+++ b/web/src/components/TopMenu/styles.css
@@ -1,7 +1,54 @@
 .mainTopMenu{
-    background: blue;
+    background: white;
     min-height: 5rem;
     width: 100%;
     margin: 0;
-    padding-left: 5rem;
+    padding-left: 17rem;
+    padding-right: 2rem;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-container2{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding:.15rem .75rem;
+    border-radius: 15px;
+    width:30vw;
+    border: 1px solid #D7D6D6;
+    color:#898484;
+}
+
+.input-container2 input{
+    outline: 0;
+    padding: .75rem 1rem;
+    width: 100%;
+    border: none;
+}
+
+.input-container2 input::placeholder{
+    font-size: 16px;
+    color:#898484;
+}
+
+.config-div{
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+}
+
+.circle-user{
+    background-color: #E83A30;
+    height: 3rem;
+    width: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 50%;
+    letter-spacing: .25rem;
+    margin: 0 1rem;
 }
