--- a/web/src/global.css
+++ b/web/src/global.css
@@ -49,7 +49,7 @@ label{
 .row{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width:100%;
     align-items: center;
     margin: .5rem;
