--- a/web/src/global.css
+++ b/web/src/global.css
@@ -113,3 +113,19 @@ body::-webkit-scrollbar-track{
 body::-webkit-scrollbar-thumb{
     background: var(--color-red-dark);
 }
+
+.main-container{
+    margin-left: 15rem;
+    height: 100%;
+    padding: .5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-title{
+    color: var(--color-red-dark);
+    margin-right: auto;
+    padding:1rem;
+}
